# ast-viewer

./: .gitignore  Cargo.toml  Dockerfile  MULTI_LANGUAGE_DESIGN.md  MULTI_LANGUAGE_SUMMARY.md  Makefile  README.md  app.py  assess_database_migration.py  ast_analyzer.py  debug_database.py  debug_generated_constants.py  docker-compose.yml  env.example  initial-state.txt  pyproject.toml  requirements.txt  run.py
.braains/agents/: adv-prompt.md  adv-reliable-dev.md
ast-visualizer/: Dockerfile
ast-visualizer/src/: app.py  language_analyzer.py  language_detector.py  python_analyzer.py  tree_sitter_analyzer.py
crates/ast-extractor/: Cargo.toml
crates/ast-extractor/src/: expression.rs  lib.rs  traits.rs
crates/ast-extractor/src/extractors/: python.rs  rust.rs
crates/code-builders/: Cargo.toml
crates/code-builders/src/: lib.rs  traits.rs
crates/code-builders/src/builders/: mod.rs
docs/: ADR-011-SQLx-Migration-Framework.md  DATABASE_MODEL.md  FUTURE.md  plan-part-0.md
metaforge-engine/: Cargo.toml  Dockerfile  clippy.toml  docker-compose.yml  rustfmt.toml
metaforge-engine/.github/workflows/: ci.yml
metaforge-engine/crates/ast-extractor/src/extractors/: javascript.rs  mod.rs
metaforge-engine/crates/generation-pipeline/: Cargo.toml
metaforge-engine/crates/generation-pipeline/src/: lib.rs
metaforge-engine/crates/semantic-mapper/: Cargo.toml
metaforge-engine/crates/semantic-mapper/src/: lib.rs
metaforge-engine/docs/: ADR_COMPLIANCE.md  ARCHITECTURE.md  adrs.jsonl
metaforge-engine/migrations/: 20250907143151_initial_schema.sql  20250907180130_add_repo_name_to_migrations.sql  20250907181411_add_migration_id_to_containers.sql  20250907184042_add_semantic_metadata_to_blocks.sql
metaforge-engine/src/: lib.rs  main.rs
metaforge-engine/src/ai_operations/: block_synthesis.rs  code_generators.rs  code_transformer.rs  pattern_library.rs
metaforge-engine/src/analysis/: call_graph.rs  dependency_analyzer.rs  import_analyzer.rs
metaforge-engine/src/core/: semantic_block.rs
metaforge-engine/src/database/: schema.rs
metaforge-engine/src/generator/: hierarchical.rs  mod.rs
metaforge-engine/src/generator/formatters/: mod.rs
metaforge-engine/src/generator/languages/: mod.rs  python.rs  rust.rs  typescript.rs
metaforge-engine/src/github/: client.rs
metaforge-engine/src/graphql/: mod.rs  schema.rs  server.rs  types.rs
metaforge-engine/src/parser/: mod.rs  universal.rs
metaforge-engine/src/parser/extractors/: mod.rs  python.rs
metaforge-engine/src/phase2/: mod.rs
metaforge-engine/src/versioning/: llm_context_manager.rs  mod.rs  semantic_diff.rs  semantic_version_control.rs
metaforge-engine/tests/: integration_tests.rs  test_app.py  test_config.rs
migrations/: 20250907143153_eliminate_source_code.sql  20250907143157_schema_alignment.sql  20250907175502_add_repo_url_to_migrations.sql  20250907181854_add_statistics_to_migrations.sql
scripts/: run_tests.sh
sql/: semantic_queries.sql
src/: cache_manager.py  main.py  main.rs  scanner.rs
src/ai_operations/: abstraction_mapper.rs  intent_processor.rs  mod.rs  pattern_matcher.rs  refactoring_engine.rs  semantic_analyzer.rs
src/analysis/: code_metrics.rs  dependency_tracker.rs  mod.rs  property_graph.rs  relationship_analyzer.rs  semantic_queries.rs
src/analyzers/: project_builder.py
src/api/: __init__.py
src/core/: mod.rs
src/database/: mod.rs  source_code_migrator.rs
src/generator/: templates.rs  universal.rs  validation.rs
src/github/: mod.rs
src/graphql/: mod.rs  versioning_schema.rs
src/parser/: extraction_context.rs
src/phase2/: backup_system.rs  metrics.rs  (+3 more)
templates/: error.html  index.html  visualization.html
tests/: __init__.py  integration_migration_test.rs  schema_migration_test.rs  test_ast_analyzer.py  test_cache_manager.py  unit_tests.rs
(+20 files in other folders)
